# kodiak

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.yml  create.rs  crud.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/io/: file.rs
core/src/unit/: mod.rs
core/src/unit/enums/: mod.rs
core/src/unit/structs/: _unit.rs  asset.rs  mod.rs  task.rs  user.rs
core/src/unit/traits/: crud.rs
server/: Cargo.toml  README.md
server/src/: cli.yml  lib.rs  main.rs
server/src/rest/api/: assets.rs  mod.rs  tasks.rs  users.rs
server/src/views/: mod.rs  path.rs
server/src/views/auth/: mod.rs
server/tests/: health.rs
src/: cli.yml  main.rs
src/io/: file.rs
src/unit/: mod.rs
src/unit/structs/: _unit.rs  asset.rs  task.rs  user.rs
src/unit/traits/: crud.rs
web/: Cargo.toml  README.md  index.html
web/src/: lib.rs
